first working implementation

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b8d02602",
    "metadata": {},
    "outputs": [
@@ -18,9 +18,9 @@
    "source": [
     "from transformers import EsmModel, EsmConfig, EsmTokenizer\n",
     "import os\n",
-    "os.environ['HF_HOME'] = '/usr/xtmp/mth45/.cache/huggingface'\n",
-    "os.environ['HF_HUB_CACHE'] = '/usr/xtmp/mth45/.cache/huggingface/hub'\n",
-    "os.environ['HF_TOKEN'] = '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'\n",
+    "# os.environ['HF_HOME'] = xxx\n",
+    "# os.environ['HF_HUB_CACHE'] = xxx\n",
+    "# os.environ['HF_TOKEN'] = xxx\n",
     "\n",
     "from gpm_model import GatedProposalDiT\n",
     "\n",
