first working implementation

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b8d02602",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "3f319acb",
    "metadata": {},
    "outputs": [
@@ -85,13 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_tokens.shape: torch.Size([1, 26])\n",
-      "x.shape: torch.Size([1, 26, 320])\n",
-      "x.shape: torch.Size([1, 26, 1024])\n",
-      "c.shape: torch.Size([1, 1024])\n",
-      "x.shape: torch.Size([1, 26, 1024])\n",
-      "gate_logits.shape: torch.Size([1, 26, 1])\n",
-      "proposal_logits.shape: torch.Size([1, 26, 34])\n",
+      "torch.Size([1, 26])\n",
       "torch.Size([1, 26, 1])\n",
       "torch.Size([1, 26, 34])\n"
      ]
@@ -102,7 +96,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,9 +105,46 @@
     "example_sequence = \"MALWMRLLPLLALLALWGPDPAAA\"\n",
     "token_ids = tokenizer(example_sequence, return_tensors=\"pt\")\n",
     "input_ids = token_ids.input_ids\n",
+    "print(token_ids.attention_mask.shape)\n",
     "\n",
-    "out = model.forward(input_ids, token_ids.input_ids.shape[1], token_ids.input_ids.shape[1]-10, 500, 1000)\n",
+    "out = model.forward(input_ids, token_ids.input_ids.shape[1], token_ids.input_ids.shape[1]-10, 500, 1000, attn_mask=token_ids.attention_mask)\n",
     "print(out[0].shape), print(out[1].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb654434",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'http://compsci-cluster-fitz-08:8888/'. Verify the server is running and reachable."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "len(tokenizer)"
    ]
   },
   {
